--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3>Insira o Link abaixo</h3>
         <input type="text" placeholder="Informe o Link" id="qrText">
         <div id="imgBox">
-            <img src="" id="qrImage" href="#" download="qrcode.png">
+            <img src="" id="qrImage">
         </div>
         <button onclick="generateQR()">Gerar QR Code</button>
         <br>
