--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
 
 </head>
+
 <body>
     <div class="container">
         <h3>Insira o Link abaixo</h3>
@@ -19,6 +21,16 @@
         <button onclick="generateQR()">Gerar QR Code</button>
         <br>
     </div>
+
+    <div class="container-second">
+
+        <img  class="githublogo" src="imgs/github_PNG23.png" alt="git-hub-logo">
+
+        <p>This repository is avaliable in GitHub <br><br>
+        <a href="https://github.com/LucasVieiraaaa/Qr-Code-Project">https://github.com/LucasVieiraaaa/Qr-Code-Project</a>
+    </p>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
