--- a/index.html
+++ b/index.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de QR Code</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="imgs/logo.png" type="image/x-icon">
+    <link rel="icon" href="imgs/qr-icon.avif" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
 
 </head>
-
 <body>
+
     <div class="container">
-        <h3>Insira o Link abaixo</h3>
-        <input type="text" placeholder="Informe o Link" id="qrText">
+        <div>
+            <img src="./imgs/qr-icon.avif" alt="qr-icon" style="width: 10em;">
+        </div>
+        <h3 style="font-size: 1.7em;">Insira o Link abaixo</h3>
+        <div>
+            <input type="text" placeholder="Informe o Link" id="qrText" class="form-input" maxlength="1000">
+        </div>
         <div id="imgBox">
             <img src="" id="qrImage">
         </div>
         <button onclick="generateQR()">Gerar QR Code</button>
         <br>
-    </div>
-
-    <div class="container-second">
-
-        <img  class="githublogo" src="imgs/github_PNG23.png" alt="git-hub-logo">
-
-        <p>This repository is avaliable in GitHub <br><br>
-        <a href="https://github.com/LucasVieiraaaa/Qr-Code-Project">https://github.com/LucasVieiraaaa/Qr-Code-Project</a>
-    </p>
     </div>
     <script src="script.js"></script>
 </body>
