--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de QR Code</title>
+    <title>QR Code Generator</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="imgs/qr-icon.avif" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
-
 </head>
 <body>
-
-    <div class="container">
-        <div>
-            <img src="./imgs/qr-icon.avif" alt="qr-icon" style="width: 10em;">
+    <div style="margin: 3em;">
+        <div class="container">
+            <div>
+                <img src="./imgs/qr-icon.avif" alt="qr-icon" class="qr-icon ">
+            </div>
+            <h3 style="
+            font-size: 1.7em;
+            margin: 0;
+            margin-top: 1em;"> Insert Link below
+            </h3>
+            <div>
+                <input type="text" placeholder="Informe o Link" id="qrText" class="form-input" maxlength="1000">
+            </div>
+            <div id="imgBox">
+                <img src="" id="qrImage">
+            </div>
+            <button onclick="generateQR()">Generate QR Code</button>
+            <br>
         </div>
-        <h3 style="font-size: 1.7em;">Insira o Link abaixo</h3>
-        <div>
-            <input type="text" placeholder="Informe o Link" id="qrText" class="form-input" maxlength="1000">
-        </div>
-        <div id="imgBox">
-            <img src="" id="qrImage">
-        </div>
-        <button onclick="generateQR()">Gerar QR Code</button>
-        <br>
     </div>
     <script src="script.js"></script>
 </body>
-
 </html>
