--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
 </head>
 <body>
-    <div style="margin: 3em;">
+    <div class="sup">
         <div class="container">
             <div>
                 <img src="./imgs/qr-icon.avif" alt="qr-icon" class="qr-icon ">
@@ -19,9 +19,7 @@
             margin: 0;
             margin-top: 1em;"> Insert Link below
             </h3>
-            <div>
                 <input type="text" placeholder="Informe o Link" id="qrText" class="form-input" maxlength="1000">
-            </div>
             <div id="imgBox">
                 <img src="" id="qrImage">
             </div>
