--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
             <div>
                 <img src="./imgs/qr-icon.avif" alt="qr-icon" class="qr-icon ">
             </div>
-            <h3 style="
-            font-size: 1.7em;
-            margin: 0;
-            margin-top: 1em;"> Insert Link below
-            </h3>
-                <input type="text" placeholder="Informe o Link" id="qrText" class="form-input" maxlength="1000">
+            <h3 class="better-h3" id="insertLink"></h3>
+                <input type="text" placeholder="Inform the link here" id="qrText" class="form-input" maxlength="1000">
             <div id="imgBox">
                 <img src="" id="qrImage">
             </div>
